Add bsFormField component

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/contentInfoBase.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/contentInfoBase.html
@@ -68,7 +68,7 @@
     @hide="closeTagsModal">
   </tags-modal>
 
-  <issue-modal v-model="issueModalOpen" :iid=3></issue-modal>
+  <issue-modal v-model="issueModalOpen" :iid="{{ item.id }}"></issue-modal>
 
 </div>
 {% endblock %}
