--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/contentInfoBase.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/contentInfoBase.html
@@ -68,7 +68,11 @@
     @hide="closeTagsModal">
   </tags-modal>
 
-  <issue-modal v-model="issueModalOpen" :iid="{{ item.id }}"></issue-modal>
+  <issue-modal 
+    v-model="issueModalOpen" 
+    iid="{{ item.id }}"
+    url="{% url 'api_v4:issues_create' %}">
+  </issue-modal>
 
 </div>
 {% endblock %}
