--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -1,24 +1,8 @@
-{% extends 'aristotle_mdr/concepts/contentInfoBase.html' %}
+{% extends 'aristotle_mdr/base.html' %}
 
-{% block title %}Issues for {{ item.name }}{% endblock %}
+{% block title %}Issue{% endblock %}
 
-{% block infoContent %}
-  <h1>Issues</h1>
-  {% if issues %}
-    <div class="list-group">
-    {% for issue in issues %}
-      <a href="#" class="list-group-item">
-        <div class="h4 list-group-item-heading">
-          <i class="fa fa-exclamation-circle"></i>
-          {{ issue.name }}
-        </div>
-        <div class="list-group-item-text">
-          Opened {{ issue.created|timesince }} ago by {{ issue.submitter.full_name }}
-        </div>
-      </a>
-    {% endfor %}
-    </div>
-  {% else %}
-    <p>No issues to display</p>
-  {% endif %}
+{% block content %}
+<a href="{% url 'aristotle_issues:item_issues' object.item.id %}">All issues for this item</a>
+<h1>{{ object.name }}</h1>
 {% endblock %}
