--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/list.html
@@ -8,14 +8,14 @@
     <div class="list-group">
     {% for issue in issues %}
     <a href="{% url 'aristotle_issues:issue' issue.id %}" class="list-group-item">
-        <div class="h4 list-group-item-heading">
-          <i class="fa fa-exclamation-circle"></i>
-          {{ issue.name }}
-        </div>
-        <div class="list-group-item-text">
-          Opened {{ issue.created|timesince }} ago by {{ issue.submitter.full_name }}
-        </div>
-      </a>
+      <div class="h4 list-group-item-heading">
+        <i class="text-success fa fa-exclamation-circle"></i>
+        {{ issue.name }}
+      </div>
+      <div class="list-group-item-text">
+        Opened {{ issue.created|timesince }} ago by {{ issue.submitter.full_name }}
+      </div>
+    </a>
     {% endfor %}
     </div>
   {% else %}
