Move issue display under tab, hide action on non item pages

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -1,9 +1,11 @@
-{% extends 'aristotle_mdr/base.html' %}
+{% extends 'aristotle_mdr/concepts/contentInfoBase.html' %}
 
 {% block title %}Issue{% endblock %}
 
-{% block content %}
-<a href="{% url 'aristotle_issues:item_issues' object.item.id %}">All issues for this item</a>
+{% block infoContent %}
+<a  class="btn btn-default" href="{% url 'aristotle_issues:item_issues' object.item.id %}">
+  All issues for this item
+</a>
 <h1>
   <i class="text-success fa fa-exclamation-circle"></i>
   {{ object.name }}
