--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/list.html
@@ -7,7 +7,7 @@
   {% if issues %}
     <div class="list-group">
     {% for issue in issues %}
-    <a href="{% url 'aristotle_issues:issue' issue.id %}" class="list-group-item">
+    <a href="{% url 'aristotle_issues:issue' issue.item_id issue.id %}" class="list-group-item">
       <div class="h4 list-group-item-heading">
         <i class="text-success fa fa-exclamation-circle"></i>
         {{ issue.name }}
