--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/conceptualDomain.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/conceptualDomain.html
@@ -17,6 +17,11 @@
 
 {% block objSpecific %}
 
+<div>
+    <h3>Description</h3>
+<div>{{ item.description }}</div>
+</div>
+
 {% if item.valuemeaning_set.count > 0 or item|can_edit:request.user %}
   <strong>Value meanings</strong>
         {% if item|can_edit:request.user %}
