--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userSideBar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userSideBar.html
@@ -63,7 +63,7 @@
         <i class="fa fa-pencil-square-o fa-fw"></i> {% trans "My Sandbox" %}</a>
     </li>
     <li {% ifequal activeTab "myreviewrequests" %}class="active"{% endifequal %}>
-        <a href="{% url 'aristotle:userMyReviewRequests' %}">
+        <a href="{% url 'aristotle_reviews:userMyReviewRequests' %}">
         <i class="fa fa-flag-o fa-fw"></i> {% trans "My Review Requests" %}</a>
     </li>
     <li role="presentation" class="nav-divider"></li>
@@ -75,7 +75,7 @@
         {% if request.user.profile.is_registrar %}
           {% ifequal activeTab "registrarTools" %}
           <ul class="nav nav-pills nav-stacked nav-collapse dashSubMenu">
-              <li><a href="{% url 'aristotle:userReadyForReview' %}">
+              <li><a href="{% url 'aristotle_reviews:userReadyForReview' %}">
                   {% comment %}Translators: A link to the list of things to be reviewed.{% endcomment %}
                   <i class="fa fa-flag fa-fw"></i> {% trans 'Review list' %}
               </a></li>
