--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -12,4 +12,8 @@
 </h1>
 <p class="text-muted">Opened {{ object.created|timesince }} ago by {{ object.submitter.full_name }}</p>
 <p>{{ object.description }}</p>
+
+{% for comment in comments %}
+  {% include 'aristotle_mdr/helpers/comment.html' with comment=comment %}
+{% endfor %}
 {% endblock %}
