adds user editing forms

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/helper/user_table_display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/helper/user_table_display.html
@@ -1,12 +1,13 @@
 {% if user.get_full_name %}
-    <a href="">{{ user.get_full_name }}</a>
+    <a href="{% url 'aristotle-user:view_another_user' user.pk %}">
+    {{ user.get_full_name }}</a>
     {% if user == request.user %}
     (You)
     {% endif %}
 
     <div>{{ user.email }}</div>
 {% else %}
-    <a href="">
+    <a href="{% url 'aristotle-user:view_another_user' user.pk %}">
     {{ user.email }}
     </a>
     {% if user == request.user %}
