--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/users/view_another_user.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/users/view_another_user.html
@@ -1,13 +1,13 @@
 {% extends "aristotle_mdr/user/userHome.html" %}
 
-{% block title %}Profile for {% firstof user.short_name user.full_name user.email %}{% endblock %}
+{% block title %}Profile for {% firstof object.short_name object.full_name object.email %}{% endblock %}
 {% block sidebar %}
     {% include "aristotle_mdr/user/userSideBar.html" with activeTab='adminTools' %}
 {% endblock %}
 
 {% block page %}
 <h1>
-View profile for <em>{% firstof user.short_name user.full_name user.email %}</em>
+View profile for <em>{% firstof object.short_name object.full_name object.email %}</em>
 </h1>
 
 <div class="row">
@@ -15,13 +15,13 @@ View profile for <em>{% firstof user.short_name user.full_name user.email %}</em
     
     <div class="panel panel-default hidden-sm hidden-xs">
       <div class="panel-body">
-        <img class="img-responsive" src="{{ user.profile.profile_picture_url }}" alt="Profile Picture"></img>
+        <img class="img-responsive" src="{{ object.profile.profile_picture_url }}" alt="Profile Picture"></img>
       </div>
     </div>
 
     <div class="panel panel-default hidden-xl hidden-lg hidden-md">
       <div class="panel-body">
-        <img class="img-responsive" style="margin:auto;max-width:100px;" src="{{ user.profile.profile_picture_url }}" alt="Profile Picture"></img>
+        <img class="img-responsive" style="margin:auto;max-width:100px;" src="{{ object.profile.profile_picture_url }}" alt="Profile Picture"></img>
       </div>
     </div>
 
@@ -30,7 +30,7 @@ View profile for <em>{% firstof user.short_name user.full_name user.email %}</em
         Actions
       </div>
       <div class="list-group">
-        <a class="list-group-item" href="{% url 'aristotle-user:update_another_user' user.pk %}">Edit Profile</a>
+        <a class="list-group-item" href="{% url 'aristotle-user:update_another_user' object.pk %}">Edit Profile</a>
         <!--<a class="list-group-item" href="{% url 'password_change' %}">Change Password</a>-->
         <!--<a class="list-group-item" href="{% url 'recently_viewed_metadata' %}">View History</a>-->
         <!--<a class="list-group-item" href="{% url 'aristotle:userRecentItems' %}">View Recent Actions</a>-->
@@ -42,7 +42,7 @@ View profile for <em>{% firstof user.short_name user.full_name user.email %}</em
   </div>
   <div class="col-md-9">
 
-    <h2>{{ user.full_name }}</h2>
+    <h2>{{ object.full_name }}</h2>
 
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -52,15 +52,15 @@ View profile for <em>{% firstof user.short_name user.full_name user.email %}</em
         <tbody>
           <tr>
             <th>Email</th>
-            <td>{{ user.email }}</td>
+            <td>{{ object.email }}</td>
           </tr>
           <tr>
             <th>Display Name</th>
-            <td>{{ user.short_name }}</td>
+            <td>{{ object.short_name }}</td>
           </tr>
           <tr>
             <th>Full Name</th>
-            <td>{{ user.full_name }}</td>
+            <td>{{ object.full_name }}</td>
           </tr>
         </tbody>
       </table>
@@ -76,12 +76,12 @@ View profile for <em>{% firstof user.short_name user.full_name user.email %}</em
           <tr>
             <th>State</th>
             <td>
-            {% if user.is_active %}
+            {% if object.is_active %}
               Active
-                <a class="pull-right btn btn-sm btn-danger" href="{% url 'aristotle-user:deactivate_user' user.pk %}">Deactivate this user</a>
+                <a class="pull-right btn btn-sm btn-danger" href="{% url 'aristotle-user:deactivate_user' object.pk %}">Deactivate this user</a>
             {% else %}
               Inactive
-                <a class="pull-right btn btn-sm btn-warning" href="{% url 'aristotle-user:reactivate_user' user.pk %}">Reactivate user account</a>
+                <a class="pull-right btn btn-sm btn-warning" href="{% url 'aristotle-user:reactivate_user' object.pk %}">Reactivate user account</a>
             {% endif %}
             </td>
           </tr>
@@ -89,28 +89,20 @@ View profile for <em>{% firstof user.short_name user.full_name user.email %}</em
             <th>Site-wide Permissions</th>
             <td>
               <ul>
-                {% if user.is_superuser %}
+                {% if object.is_superuser %}
                 <li>Registry Administrator</li>
                 {% endif %}
                 
-                {% if not user.is_superuser %}
+                {% if not object.is_superuser %}
                   <li>No extra permissions</li>
                 {% endif %}
               </ul>
-              <a class="pull-right btn btn-sm btn-warning" href="{% url 'aristotle-user:update_another_user_site_perms' user.pk %}">Update permissions</a>
+              <a class="pull-right btn btn-sm btn-warning" href="{% url 'aristotle-user:update_another_user_site_perms' object.pk %}">Update permissions</a>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Sessions
-      </div>
-      {% include 'aristotle_mdr/user/session_list.html' with object_list=sessions %}
-    </div>
-
 
   </div>
 </div>
