--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/clone_item.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/clone_item.html
@@ -22,7 +22,7 @@
         </ol>
         <div class="alert alert-danger">
             {% blocktrans %}
-            Reusing existing metadata helps users find and compare similar items. Cloning and item should only be done where a similar but clearly different item exists and can be used as a template for quickly creating a new item in the registry.
+            Reusing existing metadata helps users find and compare similar items. Cloning an item should only be done where a similar but clearly different item exists and can be used as a template for quickly creating a new item in the registry.
             {% endblocktrans %}
         </div>
         <div>
