--- a/assets/src/styles/aristotle.less
+++ b/assets/src/styles/aristotle.less
@@ -538,3 +538,7 @@ background: repeating-linear-gradient(
 .aristotle-select2 {
   min-width: 150px
 }
+
+.ta-fixed-width {
+    resize: vertical
+}
