Don't show edit on other issues

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -26,7 +26,8 @@
       <switch-edit-api
         name="description"
         initial="{{ object.description }}"
-        submit-url="{% url 'api_v4:issues' object.id %}">
+        {% if own_issue %}submit-url="{% url 'api_v4:issues' object.id %}"{% endif %}
+        >
       </switch-edit-api>
     </p>
   </div>
