publication of version history

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/reversion-compare/action_list_partial.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/reversion-compare/action_list_partial.html
@@ -20,6 +20,7 @@
             <th scope="col">{% trans 'Date/time' %}</th>
             <th scope="col">{% trans 'User' %}</th>
             <th scope="col">{% trans 'Comment' %}</th>
+            <th scope="col">{% trans 'Visiblity' %}</th>
         </tr>
     </thead>
     <tbody>
@@ -48,6 +49,16 @@
                     {% endif %}
                 </td>
                 <td>{{action.revision.comment|default:""}}</td>
+                <td>
+                    {# first_public_version #}
+                    {% if action.revision.date_created > public_date %}
+                    <i class="fa fa-fw fa-globe"></i> Public
+                    {% elif action.revision.date_created > authenticated_date %}
+                    <i class="fa fa-fw fa-user-circle-o"></i> Logged in users
+                    {% else %}
+                    <i class="fa fa-fw fa-users"></i> Workgroup only
+                    {% endif %}
+                </td>
             </tr>
         {% endfor %}
     </tbody>
