--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
@@ -29,6 +29,12 @@
             <i class="fa fa-fw fa-flag"></i> {% trans 'Submit for review'%}
         </a></li>
 
+        <li><a class=" " href="{% url 'aristotle_publishing:item_publish_details' item.id %}"
+            data-toggle="modal" data-target="#infobox_adv_edit">
+            <i class="fa fa-fw fa-cogs"></i> {% trans 'Publication details'%}
+        </a>
+        </li>
+
         {% if item|can_change_status:request.user %}
         <li><a class="" href="{% url 'aristotle:changeStatus' item.id %}" data-toggle="modal" data-target="#infobox_adv_edit">
             <i class="fa fa-fw fa-university"></i> {% trans 'Change registration status'%}
