minor search fix

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/valueDomainRepresentation.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/valueDomainRepresentation.html
@@ -43,7 +43,7 @@ So we've split this out into its own template.
 </tr>
 {% endif %}
 </table>
-{% if item.permissiblevalue_set.count > 0 or item.supplementaryvalue_set.count > 0 or item|can_edit:request.user %}
+{% if item.permissiblevalue_set.count > 0 or item.supplementaryvalue_set.count > 0 %}
   <strong>Permissible Values</strong>
     <table class="codeList table table-striped">
         <thead>
