add br to bleach whitelist, allow linebreaks in version comments, added origin to display and search corpus

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -60,6 +60,11 @@
             {{ item.comments|bleach }}
         {% endif %}
 
+        {% if item.origin %}
+            <h2>Origin</h2>
+            {{ item.origin|bleach }}
+        {% endif %}
+
         {% if item.references %}
         <div>
         <h2>References</h2>
