New issues button, formatting

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -14,7 +14,7 @@
 {% block infoContent %}
 <div class="row">
   <div class="col-sm-8 col-xs-offset-1">
-    <a  class="btn btn-default" href="{% url 'aristotle_issues:item_issues' object.item_id %}">
+    <a  class="btn btn-default pull-right" href="{% url 'aristotle_issues:item_issues' object.item_id %}">
       All issues for this item
     </a>
     <h1>
