--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/favourite_concept.html
@@ -16,5 +16,5 @@
 </a>
 <a class="btn btn-default" @click="openIssuesModal" v-cloak>
   <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-  Issues
+  New Issue
 </a>
