--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/list.html
@@ -4,6 +4,7 @@
 
 {% block infoContent %}
   <h1>Issues</h1>
+  <button class="btn btn-success pull-right" @click="openIssuesModal">New Issue</button>
   <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#open" aria-controls="open" role="tab" data-toggle="tab">Open</a></li>
       <li role="presentation"><a href="#closed" aria-controls="closed" role="tab" data-toggle="tab">Closed</a></li>
@@ -17,4 +18,10 @@
       {% include 'aristotle_mdr/issues/sublist.html' with issues=closed_issues context_class="danger" %}
     </div>
   </div>
+
+  <issue-modal 
+    v-model="issueModalOpen" 
+    iid="{{ item.id }}"
+    url="{% url 'api_v4:issues_create' %}">
+  </issue-modal>
 {% endblock %}
