Always on api, exclude issues from reversion

--- a/assets/src/styles/aristotle.less
+++ b/assets/src/styles/aristotle.less
@@ -293,6 +293,7 @@ li.viewHistory {
     border:1px solid black;
     padding:5px;
     margin-left:15px;
+    margin-top: 10px;
     background-color:white;
     dl {
         margin-bottom:0px;
