improve indicator layout

--- a/python/comet-indicator-registry/comet/templates/comet/indicator.html
+++ b/python/comet-indicator-registry/comet/templates/comet/indicator.html
@@ -26,7 +26,7 @@
 {% endif %}
 
 <h2>Calculation rules</h2>
-    {{ item.computation_description|bleach }}
+    {{ item.computationDescription|bleach }}
     {% if item.numerator_computation or item.denominator_computation %}
     <h3>Computation Rule:
     </h3>
