--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/autocomplete/templates/aristotle_mdr/actions/autocompleteUser.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/autocomplete/templates/aristotle_mdr/actions/autocompleteUser.html
@@ -1,16 +1,17 @@
 {% load i18n l10n %}
 {% load static %}
+{% load util_tags %}
 
 <span class="autocomplete-item block" data-html="true" data-value="{{ result.pk|unlocalize }}">
 {% if result.get_full_name %}
-    {{ result.highlight.full_name }}
+    {{ result.highlight.full_name|bleach }}
     {% if result == request.user %}
     (You)
     {% endif %}
-    <div>{{ result.highlight.email }}</div>
+    <div>{{ result.highlight.email|bleach }}</div>
 {% else %}
     {{ result.highlight.email }}
-    {% if result == request.user %}
+    {% if result == request.user|bleach %}
     (You)
     {% endif %}
 {% endif %}
