Remove the last of the form media

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/bulk_actions/lots_of_things.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/bulk_actions/lots_of_things.html
@@ -2,7 +2,7 @@
 
 {% block title %}Confirm changes{% endblock %}
 {% block content %}
-{{ form.media }}
+{# {{ form.media }} #}
 
 <form method="post" action="{% url 'aristotle:bulk_action' %}?next={{next}}">{% csrf_token %}
     <input type="hidden" name="bulkaction" value="{{ bulk_action_title }}"/>
