Fix cancel button

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/edit_link.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/edit_link.html
@@ -36,7 +36,7 @@
     </div>
 
         <div class="modal-footer">
-            <a class="btn btn-default" href="">Cancel</a>
+            <a class="btn btn-default" href="{{ request.GET.next }}">Cancel</a>
             <input type="submit" class="btn btn-primary" value="Save" />
         </div>
     </div>
