Better form display

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_2_select_role.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_2_select_role.html
@@ -2,23 +2,13 @@
 {% load i18n %}
 {% load static from staticfiles %}
 
-{% block title %}Add new link - Step 1: Select a relationship{% endblock %}
+{% block title %}Add new link - Step 2: Select a role{% endblock %}
 
-{% block form_title %}Step 1: Select a relationship{% endblock %}
+{% block form_title %}Step 2: Select a role{% endblock %}
 
 {% block wizard_content %}
     <div class="alert alert-info">
-        {% blocktrans %}
-        Add a new link 
-        {% endblocktrans %}
-        <p>
-          Select the role you would like the current item to have in this link
-        </p>
-        <p>
-            <a href="{% url 'aristotle_help:concept_help' app='aristotle_mdr_links' model='relation' %}">
-                Read more about relationships
-            </a>
-        </p>
+        Select the role you would like ({{ root_item.name }}) to have in this link
     </div>
     <div>
         <table>
