--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_0_base.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_0_base.html
@@ -27,8 +27,11 @@
         {% block wizard_content %}
         {% endblock %}
         <div class="modal-footer">
-            <a class="btn btn-default" href="">Cancel</a>
-            <input type="submit" class="btn btn-primary" value="{% block form_save_text %}Next{% endblock %}" />
+          <a class="btn btn-default" href="{% url 'aristotle:item' root_item.id %}">Cancel</a>
+          {% if wizard.steps.prev %}
+            <button name="wizard_goto_step" class="btn btn-default" type="submit" value="{{ wizard.steps.prev }}" formnovalidate>{% trans "Previous" %}</button>
+          {% endif %}
+          <input type="submit" class="btn btn-primary" value="{% block form_save_text %}Next{% endblock %}" />
         </div>
     </div>
     </form>
