--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_2_select_role.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/add_link_wizard_2_select_role.html
@@ -1,5 +1,5 @@
 {% extends 'aristotle_mdr_links/actions/add_link_wizard_0_base.html' %}
-{% load i18n %}
+{% load i18n aristotle_tags %}
 {% load static from staticfiles %}
 
 {% block title %}Add new link - Step 2: Select a role{% endblock %}
@@ -10,6 +10,14 @@
     <div class="alert alert-info">
         Select the role you would like ({{ root_item.name }}) to have in this link
     </div>
+    {% if not roles_exist %}
+    <div class="alert alert-danger">
+      The relation you selected doesnt have any roles. 
+      {% if root_item|can_edit:user %}
+        <a href="{% url 'aristotle_mdr_links:relation_roles_edit' root_item.id %}">Click here to add some</a>
+      {% endif %}
+    </div>
+    {% endif %}
     <div>
         <table>
         {{ form.as_table }}
