--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -44,8 +44,8 @@
           {% include "aristotle_mdr/slots/slots_display.html" %}
       {% endif %}
       {# TODO: Fix mess with how links are checked for below #}
-      {% if 'aristotle_mdr.contrib.links'|is_active_extension or 'aristotle_mdr_links'|is_active_extension %}
-          {% include "aristotle_mdr/links/links_display.html" %}
+      {% if 'aristotle_mdr_links'|is_active_extension and links %}
+          {% include "aristotle_mdr/links/links_display.html" with links=links %}
       {% endif %}
       <h2>Related content</h2>
       {% block relationships %}{% endblock %}
