--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/helpers/link_end_form.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr_links/actions/helpers/link_end_form.html
@@ -16,6 +16,13 @@
             {% endif %}
         </div>
         <div style="display:table-cell">
+        {% if f.errors %}
+          <ul class="alert alert-danger">
+            {% for error in f.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
         {{f}}
         </div>
     </div>
